--- a/AddressBook.FileOperations.Tests/AddressBook.FileOperations.Tests.csproj
+++ b/AddressBook.FileOperations.Tests/AddressBook.FileOperations.Tests.csproj
@@ -13,4 +13,7 @@
     <PackageReference Include="Moq" Version="4.13.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AddressBook.FileOperations\AddressBook.FileOperations.csproj" />
+  </ItemGroup>
 </Project>
