--- a/AddressBook.Services.Tests/AddressBook.Services.Tests.csproj
+++ b/AddressBook.Services.Tests/AddressBook.Services.Tests.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.13.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+  </ItemGroup>
 </Project>
