Fixed references in all projects

--- a/AddressBook.FileOperations.Tests/AddressBook.FileOperations.Tests.csproj
+++ b/AddressBook.FileOperations.Tests/AddressBook.FileOperations.Tests.csproj
@@ -15,5 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AddressBook.FileOperations\AddressBook.FileOperations.csproj" />
+    <ProjectReference Include="..\AddressBook.Service\AddressBook.Service.csproj" />
   </ItemGroup>
 </Project>
