--- a/AddressBook.FileOperations/AddressBook.FileOperations.csproj
+++ b/AddressBook.FileOperations/AddressBook.FileOperations.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AddressBook.Service\AddressBook.Service.csproj" />
+  </ItemGroup>
 </Project>
