--- a/AddressBook.Services.Tests/AddressBook.Services.Tests.csproj
+++ b/AddressBook.Services.Tests/AddressBook.Services.Tests.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AddressBook.FileOperations\AddressBook.FileOperations.csproj" />
+    <ProjectReference Include="..\AddressBook.Service\AddressBook.Service.csproj" />
+  </ItemGroup>
 </Project>
