--- a/AddressBook.Console/AddressBook.Console.csproj
+++ b/AddressBook.Console/AddressBook.Console.csproj
@@ -5,4 +5,11 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AddressBook.FileOperations\AddressBook.FileOperations.csproj" />
+    <ProjectReference Include="..\AddressBook.Service\AddressBook.Service.csproj" />
+  </ItemGroup>
 </Project>
